src/objects/employe__c.object
<CustomObject>
    <fields>
        <fullName>ExternaID__c</fullName>
        <externalId>true</externalId>
        <label>ExternaID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Store</label>
        <referenceTo>Store__c</referenceTo>
        <relationshipLabel>employes</relationshipLabel>
        <relationshipName>employes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>employes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <formula>Store__r.StoreName__c  + &apos;   #   &apos; + TEXT(Store__r.StoreType__c)</formula>
        <label>description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>new__c</fullName>
        <formula>HYPERLINK(&quot;https://na9.salesforce.com/001/e?retURL=%2F001%2Fo&quot;, &quot;Create a New Account&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>new</label>
        <type>Text</type>
    </fields>
    <label>employe</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ID-{0000}</displayFormat>
        <label>employ</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>employes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>